--- a/新建文件夹/index.html
+++ b/新建文件夹/index.html
@@ -9,6 +9,9 @@
         .active{
             background: rgb(235, 15, 15);
         }
+        .liked{
+            background: deeppink;
+        }
     </style>
 </head>
 <body>
@@ -117,6 +120,15 @@
 <div id="seg2">
     <alert></alert>
 </div>
+<div id="mm">
+    <like></like>
+</div>
+<!-- 还有一种方法 -->
+<!-- <template id="like-component-tpl">
+    <button :class="{liked:liked}" @click="toggle_like()">
+        👍{{like_count}}
+    </button>
+</template> -->
     <script src="https://cdn.bootcss.com/vue/2.5.15/vue.min.js"></script>
     <script src="mmain.js"></script>
 </body>
